--- a/package.json
+++ b/package.json
@@ -55,9 +55,11 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "marked": "^13.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
     "@types/qrcode.react": "^1.0.5",
@@ -66,6 +68,7 @@
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/marked": "^6.0.0"
   }
 }
