--- a/package.json
+++ b/package.json
@@ -46,8 +46,11 @@
     "genkit": "^1.14.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.475.0",
+    "marked": "^13.0.2",
     "next": "15.3.3",
+    "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
+    "pdfjs-dist": "4.0.379",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -56,11 +59,11 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
-    "marked": "^13.0.2"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/jspdf": "^2.0.0",
+    "@types/marked": "^6.0.0",
     "@types/node": "^20",
     "@types/qrcode.react": "^1.0.5",
     "@types/react": "^18",
@@ -68,7 +71,6 @@
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@types/marked": "^6.0.0"
+    "typescript": "^5"
   }
 }
