--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev -p 9002",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
@@ -43,6 +44,7 @@
     "lucide-react": "^0.408.0",
     "marked": "^13.0.2",
     "next": "14.2.5",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "pdfjs-dist": "4.4.168",
     "qrcode.react": "^3.1.0",
