--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
     "firebase": "^10.12.3",
+    "jsbarcode": "^3.11.6",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.408.0",
     "marked": "^13.0.2",
