The app isn't starting. Please investigate what could be wrong based on

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
     "firebase": "^10.12.3",
+    "genkit": "^1.0.0",
+    "@genkit-ai/googleai": "^1.0.0",
     "jsbarcode": "^3.11.6",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.408.0",
