--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "embla-carousel-react": "^8.1.6",
     "firebase": "^10.12.3",
     "jsbarcode": "^3.11.6",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.408.0",
     "marked": "^13.0.2",
     "next": "14.2.5",
@@ -51,12 +52,16 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-wrap-balancer": "^1.1.1",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/jsbarcode": "^3.11.4",
+    "@types/jspdf": "^2.0.0",
+    "@types/marked": "^6.0.0",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
