--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jsbarcode": "^3.11.6",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.408.0",
+    "marked": "^13.0.2",
     "next": "14.2.5",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
@@ -51,7 +52,6 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
-    "react-markdown": "^9.0.1",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -60,6 +60,7 @@
   "devDependencies": {
     "@types/jsbarcode": "^3.11.4",
     "@types/jspdf": "^2.0.0",
+    "@types/marked": "^6.0.0",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
