--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
+    "file-saver": "^2.0.5",
     "firebase": "^10.12.3",
     "jsbarcode": "^3.11.6",
     "jspdf": "^2.5.1",
@@ -47,6 +48,7 @@
     "next": "14.2.5",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
+    "pdf-lib": "^1.17.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -58,6 +60,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/jsbarcode": "^3.11.4",
     "@types/jspdf": "^2.0.0",
     "@types/marked": "^6.0.0",
